--- a/scss/component/_component_drop_button.scss
+++ b/scss/component/_component_drop_button.scss
@@ -1,11 +1,4 @@
 .dropbutton-wrapper {
-  &.dropbutton-single {
-    .dropbutton-action {
-      a, input {
-        border-right: 1px solid $primary-dark;
-      }
-    }
-  }
   .dropbutton-widget {
     border: none !important;
     border-radius: 0 !important;
@@ -106,6 +99,13 @@
         &:last-child {
           border-bottom: 1px solid $primary-dark;
         }
+      }
+    }
+  }
+  &.dropbutton-single .dropbutton-widget .dropbutton {
+    .dropbutton-action {
+      a, input {
+        border-right: 1px solid $primary-dark;
       }
     }
   }
